--- a/second.html
+++ b/second.html
@@ -37,7 +37,7 @@
     <div class="container">
         
         <div class="row">
-            <div class="col-sm-3 col-md-1 col-lg-12">
+            <div class="col-sm-3 col-md-1">
 
             </div>
             <div class="col-sm-3 col-md-1">
@@ -76,28 +76,7 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-9 col-lg-8">
-
-            </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12">
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-6">
-
-            </div>
-            <div class="col-sm-3 col-md-3 col-lg-6">
-
-            </div>
-            <div class="col-sm-3 col-md-3">
+            <div class="col-sm-3 col-md-9">
 
             </div>
             <div class="col-sm-3 col-md-3">
@@ -106,22 +85,28 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-4">
-
-            </div>
-            <div class="col-sm-3 col-md-3 col-lg-8">
+            <div class="col-sm-12 col-md-12">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-12 col-lg-4">
+            <div class="col-md-3">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
+            <div class="col-md-3">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-3">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3 col-md-12">
 
             </div>
         </div>
