--- a/third.html
+++ b/third.html
@@ -37,91 +37,55 @@
     <div class="container">
         
         <div class="row">
-            <div class="col-sm-3 col-md-1 col-lg-12">
+            <div class="col-sm-6">
 
             </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
+            <div class="col-sm-6">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-9 col-lg-8">
+            <div class="col-sm-4">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="col-sm-8">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-6">
+            <div class="col-sm-2">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-6">
-
-            </div>
-            <div class="col-sm-3 col-md-3">
-
-            </div>
-            <div class="col-sm-3 col-md-3">
+            <div class="col-sm-10">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-4">
+            <div class="col-sm-7">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-8">
+            <div class="col-sm-5">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-12 col-lg-4">
+            <div class="col-sm-9">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
+            <div class="col-sm-3">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
+        </div>
+
+        <div class="row">
+            <div class="col-sm-11">
+
+            </div>
+            <div class="col-sm-1">
 
             </div>
         </div>
