--- a/index.html
+++ b/index.html
@@ -37,91 +37,52 @@
     <div class="container">
         
         <div class="row">
-            <div class="col-sm-3 col-md-1 col-lg-12">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
-
-            </div>
-            <div class="col-sm-3 col-md-1">
+            <div class="col-lg-12">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-9 col-lg-8">
+            <div class="col-lg-8">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="col-lg-4">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-6">
-
-            </div>
-            <div class="col-sm-3 col-md-3 col-lg-6">
-
-            </div>
-            <div class="col-sm-3 col-md-3">
-
-            </div>
-            <div class="col-sm-3 col-md-3">
+            <div class="col-lg-12">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-3 col-lg-4">
+            <div class="col-lg-6">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-8">
+            <div class="col-lg-6">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-12 col-lg-4">
+            <div class="col-lg-4">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
+            <div class="col-lg-8">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4">
+
+            </div>
+            <div class="col-lg-4">
+
+            </div>
+            <div class="col-lg-4">
 
             </div>
         </div>
