--- a/Challenge-Multi.html
+++ b/Challenge-Multi.html
@@ -27,7 +27,7 @@
             min-height: 50px;
             }
 
-            [class^="col-"] {
+            [class^="col"] {
             border: 1px solid var(--light-green);
             min-height: 50px;
             }
@@ -37,16 +37,16 @@
     <div class="container">
         
         <div class="row">
-            <div class="col-sm-3 col-md-1 col-lg-12">
+            <div class="col-sm-12 col-md-12 col-lg-12">
 
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 col-md-9 col-lg-8">
+            <div class="col-sm-12 col-md-9 col-lg-8">
 
             </div>
-            <div class="col-sm-3 col-md-3 col-lg-4">
+            <div class="col-sm-12 col-md-3 col-lg-4">
 
             </div>
         </div>
