--- a/Challenge-Multi.html
+++ b/Challenge-Multi.html
@@ -8,8 +8,8 @@
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <style>
             :root {
-            --dark-blue: #00a0df;
-            --light-green: #029e8c;
+            --dark-blue: #00668f;
+            --light-green: #0b554c;
             --yellow: #0ed461;
             --orange: #ccec15;
             --salmon: #ce810e;
@@ -23,12 +23,12 @@
             }
 
             .row {
-            border: 1px solid var(--dark-blue);
+            border: 10px solid var(--dark-blue);
             min-height: 50px;
             }
 
             [class^="col"] {
-            border: 1px solid var(--light-green);
+            border: 8px solid var(--light-green);
             min-height: 50px;
             }
         </style>
