--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
             }
 
             .row {
-            border: 1px solid var(--dark-blue);
+            border: 2px solid var(--dark-blue);
             min-height: 50px;
             }
 
-            [class^="col-"] {
-            border: 1px solid var(--light-green);
+            [class^="col"] {
+            border: 2px solid var(--light-green);
             min-height: 50px;
             }
         </style>
 </head>
 <body>
     <div class="container">
-        
         <div class="row">
             <div class="col-lg-12">
 
@@ -86,7 +85,11 @@
 
             </div>
         </div>
-
     </div>
+
+    <a href="file:///C:/Users/128AMeckelRhett/OneDrive%20-%20FRHSD/Documents/Wed%20Des/Bootstrap-Breakpoints/Challenge-Md.html">Challenge-Md</a>
+    <a href="file:///C:/Users/128AMeckelRhett/OneDrive%20-%20FRHSD/Documents/Wed%20Des/Bootstrap-Breakpoints/Challenge-Sm.html">Challenge-Sm</a>
+    <a href="file:///C:/Users/128AMeckelRhett/OneDrive%20-%20FRHSD/Documents/Wed%20Des/Bootstrap-Breakpoints/Challenge-Multi.html">Challenge-Multi</a>
+
 </body>
 </html>
