--- a/Challenge-Sm.html
+++ b/Challenge-Sm.html
@@ -8,8 +8,8 @@
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <style>
             :root {
-            --dark-blue: #00a0df;
-            --light-green: #029e8c;
+            --dark-blue: #00668f;
+            --light-green: #0b554c;
             --yellow: #0ed461;
             --orange: #ccec15;
             --salmon: #ce810e;
@@ -89,8 +89,11 @@
 
             </div>
         </div>
-
     </div>
-    <link>
+
+    <a href="file:///C:/Users/128AMeckelRhett/OneDrive%20-%20FRHSD/Documents/Wed%20Des/Bootstrap-Breakpoints/index.html">Challenge-Lg</a>
+    <a href="file:///C:/Users/128AMeckelRhett/OneDrive%20-%20FRHSD/Documents/Wed%20Des/Bootstrap-Breakpoints/Challenge-Md.html">Challenge-Md</a>
+    <a href="file:///C:/Users/128AMeckelRhett/OneDrive%20-%20FRHSD/Documents/Wed%20Des/Bootstrap-Breakpoints/Challenge-Multi.html">Challenge-Multi</a>
+    
 </body>
 </html>
